--- a/pass.html
+++ b/pass.html
@@ -19,6 +19,10 @@
 
 <p id="result">This text will be replaced </p>
 
+<div>
+    <img src = "monkey.jpeg" width = "200" height = "200" id = "changeImage" onclick="newImage()"/>
+</div>
+
 <script> 
  let correct=0,wrong=0;
 function processPhrase(){
@@ -37,7 +41,23 @@ function processPhrase(){
        alert("Access denied")
        out.innerHTML = "Wrong Count : "+wrong
    }
+   function newImage()
+ {    
+     
+     switch(usingImage)
+     {
+         case 1 : document.getElementById("changeImage").src = "monkey.jpeg";
+                     usingImage = usingImage+1
+                  break;
+         case 2 : document.getElementById("changeImage").src = "horse.jpeg";
+         usingImage = usingImage+1
+                break;
+         case 3 : document.getElementById("changeImage").src = "cat.jpg";
+         usingImage = 1;
+                break;
 
+     }
+ }
 
  }
 </script>
