--- a/pass.html
+++ b/pass.html
@@ -46,13 +46,13 @@ function processPhrase(){
      
      switch(usingImage)
      {
-         case 1 : document.getElementById("changeImage").src = "monkey.jpeg";
+         case 1 : document.getElementById("changeImage").src = "Dog.jpeg";
                      usingImage = usingImage+1
                   break;
-         case 2 : document.getElementById("changeImage").src = "horse.jpeg";
+         case 2 : document.getElementById("changeImage").src = "Donkey.jpeg";
          usingImage = usingImage+1
                 break;
-         case 3 : document.getElementById("changeImage").src = "cat.jpg";
+         case 3 : document.getElementById("changeImage").src = "Elephant.jpg";
          usingImage = 1;
                 break;
 
