--- a/pass.html
+++ b/pass.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
- 
+ <head><title>Webapps Assignment 06</title></head>
 <body>
-    <title>Web apps Lab 06</title>
-<h2>Pass phrase by Sai Lavanya Peddinti</h2>
 
+<h2>Pass phrase by Sai Lavanya Peddinti </h2>
 
 <form>
     <label for="pass">Enter the secret phrase</label>
-    <input type ="password" id="pass" name="password"  value="Let me in"> <br>
+    <input type ="password" id="secret" name="password"  value="Let me in"> <br>
 <br>
     <label for="pwd">Enter a phrase </label>
     <input type ="text" id="check"  autofocus> <br>
@@ -16,19 +15,18 @@
     <input type="button" onclick="processPhrase()" value="Check the phrase">
 </form>
 
-
 <p id="result">This text will be replaced </p>
 
+<br>
 <div>
-    <img src = "monkey.jpeg" width = "200" height = "200" id = "changeImage" onclick="newImage()"/>
+    <img src = "Donkey.jpeg" width = "200" height = "200" id = "changeImage" onclick="newImage()"/>
 </div>
 
 <script> 
- let correct=0,wrong=0;
+ let correct=0,wrong=0,usingImage = 1;
 function processPhrase(){
-   var secret = document.getElementById("pass").value
+   var secret = document.getElementById("secret").value
    var check = document.getElementById("check").value
-
    out = document.getElementById("result")
    if(secret == check)
    {
@@ -41,25 +39,25 @@ function processPhrase(){
        alert("Access denied")
        out.innerHTML = "Wrong Count : "+wrong
    }
-   function newImage()
+ }
+ function newImage()
  {    
      
      switch(usingImage)
      {
-         case 1 : document.getElementById("changeImage").src = "Dog.jpeg";
+         case 1 : document.getElementById("changeImage").src = "Donkey.jpeg";
                      usingImage = usingImage+1
                   break;
-         case 2 : document.getElementById("changeImage").src = "Donkey.jpeg";
+         case 2 : document.getElementById("changeImage").src = "Dog.jpg";
          usingImage = usingImage+1
                 break;
-         case 3 : document.getElementById("changeImage").src = "Elephant.jpg";
+         case 3 : document.getElementById("changeImage").src = "Elephantt.jpg";
          usingImage = 1;
                 break;
 
      }
  }
-
- }
 </script>
+
 </body>
-</html> 
+</html>
